tests/paczka1/small_fuzzy/28067761.err
Error in line 2: vaSq6 S198 9,6
Error in line 1: pEbtcwMKMO S492 2,1
